fix: remove page scrollbar feat: add scrollable cards area and card content

--- a/areaDeTrabalho.css
+++ b/areaDeTrabalho.css
@@ -1,6 +1,9 @@
 body{
     background-color: rgb(247, 247, 247);
 }
+body::-webkit-scrollbar{
+    display: none;
+}
 .list{
     display: flex;
     flex-direction: column;
@@ -9,6 +12,7 @@ body{
     border-radius: 10px;
     width: 288px;
     gap: 10px;
+    margin-top: 4px;
 }
 .inputContentContainer button{
     margin-right: 5px;
@@ -16,7 +20,7 @@ body{
 }
 .removeButton{
     display: none;
-    margin-left: 14px;
+    margin-left: 16px;
     border: none;
     color: rgb(255, 89, 89);
     background-color: rgb(221, 221, 221);
@@ -91,7 +95,6 @@ body{
 }
 .complete.completed{
     background-color: oklch(82.8% 0.111 230.318);
-    color: rgb(37, 37, 37);
     text-align: center;
 }
 .listContent{
@@ -166,7 +169,7 @@ body{
     width: 210px;
     height: 22px;
     text-align: left;
-    color: rgb(46, 46, 46);
+    color: rgb(0, 0, 0);
 }
 .menuOptions button:hover{
     background-color: rgb(226, 226, 226);
@@ -247,7 +250,7 @@ body{
     border-radius: 10px;
     height: 25px;
     background-color: white;
-    color: rgb(41, 41, 41);
+    color: rgb(12, 12, 12);
 }
 .canal button:hover{
     background-color: rgb(224, 224, 224);
@@ -279,7 +282,7 @@ body{
     height: 30px;
     width: 58px;
     border-radius: 10px ;
-    color: rgb(99, 99, 99);
+    color: rgb(17, 17, 17);
 }
 .filters:hover{
     background-color: rgb(228, 228, 228);
@@ -293,6 +296,13 @@ body{
     grid-template-columns: repeat(auto-fill, 300px);
     gap: 20px;
     margin-top: 20px;
+    min-height: 586px;
+    max-height: 586px;
+    overflow-y: scroll;
+    border-top: 1px solid rgb(209, 209, 209);
+}
+.cardContainer::-webkit-scrollbar{
+    display: none;
 }
 .card{
     display: flex;
@@ -300,7 +310,7 @@ body{
     background-color: rgb(255, 255, 255);
     width: 300px;
     height: 300px;
-    border: 0.1px solid rgb(233, 233, 233);
+    border: 0.1px solid rgb(216, 216, 216);
     border-radius: 10px;
     gap: 10px;
     padding-left: 10px;
@@ -314,7 +324,16 @@ body{
 .cardContent{
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    width: 290px;
+    border-top: 1px solid rgb(199, 199, 199);
+
+    min-height: 260px;
+    max-height: 260px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+.cardContent::-webkit-scrollbar {
+    display: none;
 }
 .inputContentContainer{
     display: flex;
@@ -326,6 +345,8 @@ body{
     width: 288px;
     border-radius: 4px;
     outline: 1px solid rgb(230, 230, 230);
+    flex-shrink: 0;
+    margin-top: 4px;
 }
 .inputContent{
     resize: none;
@@ -358,7 +379,7 @@ body{
     background-color: rgb(255, 255, 255);
     height: 20px;
     width: 267px;
-    color: black;
+    color: rgb(0, 0, 0);
 }
 .cardTitle:hover{
     background-color: rgb(223, 223, 223);
